--- a/tests/gnrc_lorawan/Makefile
+++ b/tests/gnrc_lorawan/Makefile
@@ -13,6 +13,9 @@ USEMODULE += random
 USEMODULE += gnrc_netdev_default
 USEMODULE += auto_init_gnrc_netif
 USEMODULE += gnrc_lorawan
+USEMODULE += gnrc_pktbuf_cmd
+
+DEVELHELP ?= 1
 
 DRIVER ?= sx1276
 
