fix crypto functions

--- a/tests/gnrc_lorawan/Makefile
+++ b/tests/gnrc_lorawan/Makefile
@@ -24,7 +24,7 @@ USEMODULE += $(DRIVER)
 
 USEMODULE += hashes
 USEMODULE += crypto
-CFLAGS += -DCRYPTO_AES
+CFLAGS += -DCRYPTO_AES -DDEBUG_ASSERT_VERBOSE
 
 INCLUDES += $(CURDIR)
 
