--- a/sys/Makefile.include
+++ b/sys/Makefile.include
@@ -5,6 +5,9 @@ endif
 ifneq (,$(filter gnrc_netif,$(USEMODULE)))
   USEMODULE_INCLUDES += $(RIOTBASE)/sys/net/gnrc/netif/include
 endif
+ifneq (,$(filter gnrc_lorawan,$(USEMODULE)))
+  USEMODULE_INCLUDES += $(RIOTBASE)/sys/net/gnrc/link_layer/gnrc_lorawan/include
+endif
 ifneq (,$(filter gnrc_sock,$(USEMODULE)))
   USEMODULE_INCLUDES += $(RIOTBASE)/sys/net/gnrc/sock/include
   ifneq (,$(filter gnrc_ipv6,$(USEMODULE)))
